2006-09-16  Junichi Uekawa  <dancer@debian.org>

	* added patch from Mattia Dongili <malattia@linux.it> for pbuilder-uml.
	diffstat /tmp/pbuilder-uml.diff 
	debian/rules             |   16 ++++++++++++++--
	pbuilder-checkparams     |    2 +-
	pbuilder-uml-checkparams |    2 +-
	pbuilder-user-mode-linux |   20 +++++++++++++++-----
	pdebuild-uml-checkparams |    2 +-
	pdebuild-user-mode-linux |    2 +-
	6 files changed, 33 insertions(+), 11 deletions(-)

2006-09-03  Junichi Uekawa  <dancer@debian.org>

	* examples/B90linda, etc.: add notice that it's usable for hookdir.

2006-09-02  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-checkparams (BASEBUILDPLACE): support --login, --execute, --pdebuild

2006-08-25  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-modules: support for selinux.

2006-08-20  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-checkparams: sort and reverse-sort bindmounts
	* pbuilder-modules: 

2006-08-15  Junichi Uekawa  <dancer@debian.org>

	* debian/control (Recommends): recommend cowdancer, for those
	people who complain about speed.

	* debian/TODO: update the TODO file for a change.

	* pbuilder-checkparams: PKGNAME_LOGFILE option support 
	* pbuilderrc: PKGNAME_LOGFILE option support 
	* pbuilderrc.5: PKGNAME_LOGFILE option support 

2006-07-23  Junichi Uekawa  <dancer@debian.org>

	* Documentation/pbuilder-doc.xml: update documentation on fakechroot.

2006-06-26  Junichi Uekawa  <dancer@debian.org>

	* pdebuild-internal: export DEBBUILDOPTS

2006-06-17  Junichi Uekawa  <dancer@debian.org>

	* testsuite/run-test.sh: remove sarge from test target, since I
	know it fails every time.

2006-06-15  Junichi Uekawa  <dancer@debian.org>

	* debian/pbuilder-test/01_pbuilder_create: test against sid rather
	than sarge for now, since amd64 sarge doesn't work.

2006-06-11  Junichi Uekawa  <dancer@debian.org>

	* pdebuild-checkparams: do not error out if buildresult directory
	does not exist.

	* pbuilder-buildpackage: actually do error-checking.
