@@ -1288,13 +1288,13 @@ cvs -z3 -d:pserver:anonymous@cvs.alioth.debian.org:/cvsroot/pbuilder co pbuilder
 	<command>cowdancer</command> package since 0.14
       </para>
       <para>
-	Example command-lines for cowdancer look like the following.
+	Example command-lines for cowbuilder look like the following.
       </para>
       <para>
 	<screen>
-# cowdancer --create --distribution sid
-# cowdancer --update --distribution sid
-# cowdancer --build XXX.dsc
+# cowbuilder --create --distribution sid
+# cowbuilder --update --distribution sid
+# cowbuilder --build XXX.dsc
 	</screen>
       </para>
       <para>
@@ -1304,7 +1304,7 @@ cvs -z3 -d:pserver:anonymous@cvs.alioth.debian.org:/cvsroot/pbuilder co pbuilder
       </para>
       <para>
 	<screen>
-$ pdebuild --pbuilder cowdancer 
+$ pdebuild --pbuilder cowbuilder
 	</screen>
       </para>
     </sect1>
