@@ -1,8 +1,9 @@
 pbuilder (0.160) UNRELEASED; urgency=low
 
-  * 
+  * Bug fix: "pbuilder-doc.html: cowbuilder instead of cowdancer", thanks
+    to Joachim Breitner (Closes: #394673).
 
- -- Junichi Uekawa <dancer@debian.org>  Mon,  9 Oct 2006 15:57:03 +0900
+ -- Junichi Uekawa <dancer@debian.org>  Mon, 23 Oct 2006 23:12:28 +0900
 
 pbuilder (0.159) unstable; urgency=low
 
