@@ -1,3 +1,7 @@
+2006-10-23  Junichi Uekawa  <dancer@debian.org>
+
+	* Documentation/pbuilder-doc.xml: s/cowdancer/cowbuilder/
+
 2006-09-16  Junichi Uekawa  <dancer@debian.org>
 
 	* added patch from Mattia Dongili <malattia@linux.it> for pbuilder-uml.
